<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:autofillHints="no"
        android:hint="@string/medicine_name" />

    <EditText
        android:id="@+id/labelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:autofillHints="no"
        android:hint="@string/medicine_label" />

    <Spinner
        android:id="@+id/repeatSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#898989"
        android:contentDescription="@string/repeat_option" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:hint="@string/time_hint"
            android:paddingEnd="8dp"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:hint="@string/date_hint"
            android:paddingStart="8dp"
            android:textColor="@color/text"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Hourly option views -->
    <LinearLayout
        android:id="@+id/hourlySelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly_every" />

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Custom option views -->
    <LinearLayout
        android:id="@+id/customSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_days" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mondayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/m_unselected"
                android:contentDescription="@string/monday" />

            <ImageView
                android:id="@+id/tuesdayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/t_unselected"
                android:contentDescription="@string/tuesday" />

            <ImageView
                android:id="@+id/wednesdayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/w_unselected"
                android:contentDescription="@string/wednesday" />

            <ImageView
                android:id="@+id/thursdayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/t_unselected"
                android:contentDescription="@string/thursday" />

            <ImageView
                android:id="@+id/fridayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/f_unselected"
                android:contentDescription="@string/friday" />

            <ImageView
                android:id="@+id/saturdayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/s_unselected"
                android:contentDescription="@string/saturday" />

            <ImageView
                android:id="@+id/sundayImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="4dp"
                android:src="@drawable/s_unselected"
                android:contentDescription="@string/sunday" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_medicine"
        android:contentDescription="@string/add_medicine" />
</LinearLayout>
