<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_back"
        android:focusable="true"
        android:src="@drawable/arrow_back"
        android:visibility="gone" /> <!-- Initially hidden -->

    <ImageView
        android:id="@+id/profileButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/profile_icon"
        android:focusable="true"
        android:src="@drawable/profile_icon"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/setting_icon"
        android:focusable="true"
        android:src="@drawable/setting_icon"
        android:visibility="gone" /> <!-- Initially hidden -->

</androidx.appcompat.widget.Toolbar>
