<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <!-- Profile photo for editing -->
    <ImageView
        android:id="@+id/editProfilePhotoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/edit_photo"
        android:contentDescription="@string/edit_profile_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clickable="true"
        android:focusable="true" />

    <!-- Text field for new user name -->
    <EditText
        android:id="@+id/newUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_username"
        android:inputType="textPersonName"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/editProfilePhotoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginHorizontal="32dp" />

    <!-- Cancel button -->
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/newUsernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <!-- Save button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/newUsernameEditText"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
