<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Include the Toolbar fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/toolbar"
        android:name="dam_48286.finalproject.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <!-- Profile photo -->
    <ImageView
        android:id="@+id/profilePhotoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile_icon" />

    <!-- User name -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePhotoImageView"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:text="@string/username" />

    <!-- Button to edit profile -->
    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameTextView"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_profile" />

    <!-- Button to logout -->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfileButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:text="@string/logout" />
</RelativeLayout>
