<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/medicine_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar with circular clickable -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back" />

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/profile_icon"
            android:focusable="true"
            android:src="@drawable/profile_icon" />

    </androidx.appcompat.widget.Toolbar>

    <!-- RecyclerView for displaying list of cards -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="8dp" />

    <!-- Button to add a plan -->
    <Button
        android:id="@+id/addPlanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/add_medicine" />

</RelativeLayout>